Refactor leave approval logic and add LeaveApprovedRequest DTO.